organize inputs, switch to URI.toURL() (to avoid deprecation warnings)