@@ -2,7 +2,7 @@ package io.compgen.cgpipe.loader;
 
 import java.io.IOException;
 import java.io.InputStream;
-import java.net.URL;
+import java.net.URI;
 
 public class HttpSourceLoader extends SourceLoader {
 	public HttpSourceLoader(SourceLoader parent) {
@@ -11,7 +11,8 @@ public class HttpSourceLoader extends SourceLoader {
 	
 	public Source loadPipeline(String filename, String hash) throws IOException {
 		try {
-	        InputStream is = new URL(filename).openStream();
+			InputStream is = URI.create(filename).toURL().openStream();
+//	        InputStream is = new URL(filename).openStream();
 			if (is != null) {
 				return loadPipeline(is, filename, hash);
 			}
